Fixing vine image on mobile and adding padding for mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -734,6 +734,11 @@ footer ul > li > a {
   width: auto !important;
 }
 
+#comp-container {
+  width: 90%;
+  margin: 0 auto;
+}
+
 #competitive-analysis > ul > li {
   padding-bottom: 0.5rem;
   text-align: center;
@@ -994,6 +999,7 @@ li.comp-body {
 li.logos-list-item {
   display: inline-block;
   margin: 0 auto;
+  padding-bottom: 30px;
   text-align: center;
   width: 100%;
 }
@@ -1013,7 +1019,8 @@ li.logos-list-item > img {
 }
 
 #hifi .section-body {
-  margin-top: 3rem;
+  margin-bottom: 50px;
+  margin-top: 70px;
 }
 
 #hifi-conclusion {
